tests/basic/eq/eq_int_01.pan.out
tests/basic/eq/eq_int_01.pan:4:1-3: error: unable to verify type of f2
tests/basic/eq/eq_int_01.pan:7:1-3: error: unable to verify type of f3