tests/basic/eq/eq_int_01.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }

f2 : {v:bool|v=false}
f2 = eq 1 1

f3 : {v:bool|false}
f3 = eq 1 1
